--- a/Cars/Cars.csproj
+++ b/Cars/Cars.csproj
@@ -7,6 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
   </ItemGroup>
 
   <ItemGroup>
